# flexibleSubsetSelection

./: .gitignore  1-designProcess.ipynb  4-performance.ipynb  6-clusterRepresentatives.ipynb  7-discreteCoverage.ipynb  LICENSE  README.md  designProcess.ipynb  escapes.py  loss.py  plot.py  pyproject.toml  requirements.txt  sets.py  setup.py  solver.py  tui.py
.github/: main.yml
.github/workflows/: main.yml
data/: computationData.csv  designProcessBlend1Subset.pkl  designProcessBlend2Subset.pkl  designProcessBlend3Subset.pkl  designProcessData.pkl  designProcessDistinct2Subset.pkl  designProcessDistinct3Subset.pkl  designProcessDistinctSubset.pkl  solverData.csv  solverLog.csv
data/1-designProcess/: blend1Subset.pkl  blend2Subset.pkl  blend3Subset.pkl  distinct1Subset.pkl  distinct2Subset.pkl  distinct3Subset.pkl  distinctSubset.pkl  fullData.pkl  hullSubset.pkl  outliersSubset.pkl
data/2-objectives/: coverageBestOfRandomSubset.pkl  (+17 more)
docs/: conf.py  index.md
exampleDatasets/: chessOpenings.csv  umap.csv
flexibleSubsetSelection/: __init__.py  algorithm.py  escapes.py  generate.py  logger.py  loss.py  metric.py  objective.py  plot.py  sets.py  solver.py  timer.py  tui.py
jupyter/: Fig1-designProcess.ipynb  Fig2&3-objectives.ipynb  Fig4-performance.ipynb  Fig5-scatterplotOverdraw.ipynb  Fig6-clusterRepresentatives.ipynb  Fig8-frameSelection.ipynb  Fig9-tables.ipynb  _config.yml  _toc.yml
notebooks/: Fig1-designProcess.ipynb  Fig4-performance.ipynb  Fig5-scatterplotOverdraw.ipynb  Fig6-clusterRepresentatives.ipynb  Fig7-discreteCoverage.ipynb  Fig8-frameSelection.ipynb
(+173 files in other folders)
